<!--
  ~ Copyright (c) 2018, Nordic Semiconductor
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
  ~
  ~ 1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.
  ~
  ~ 2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the
  ~ documentation and/or other materials provided with the distribution.
  ~
  ~ 3. Neither the name of the copyright holder nor the names of its contributors may be used to endorse or promote products derived from this
  ~ software without specific prior written permission.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
  ~ LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
  ~ HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
  ~ LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
  ~ ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
  ~ USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->

<resources>
    <string name="app_name">Bot</string>
    <string name="feature_name">Bot</string>

    <string name="menu_filter">Filter</string>
    <string name="menu_filter_uuid">Only devices advertising LBS UUID</string>
    <string name="menu_filter_nearby">Only nearby devices</string>

    <string name="unknown_device">Unknown Device</string>
    <string name="turn_on">On</string>
    <string name="turn_off">Off</string>
    <string name="title_led_state">LED</string>
    <string name="title_button_state">Button</string>
    <string name="state">State</string>
    <string name="button_pressed">Pressed</string>
    <string name="button_released">Released</string>
    <string name="button_unknown">Unknown</string>
    <string name="led_summary">Toggle the switch to turn the LED 3 on or off.</string>
    <string name="button_summary">Press Button 1 on the dev kit.</string>

    <string name="location_permission_title">LOCATION PERMISSION REQUIRED</string>
    <string name="location_permission_info">From Android 6.0 Marshmallow onwards the application requires Location permission in order to scan for Bluetooth Low Energy devices.
      \n\nThis is because Bluetooth LE beacons, for example iBeacons or Eddystone, may be used to determine the phone\'s and user\'s location. <b>nRF Blinky</b> will not use this information in any way.</string>
    <string name="location_permission_action">Grant permission</string>
    <string name="location_permission_settings">Settings</string>

    <string name="bluetooth_disabled_title">BLUETOOTH DISABLED</string>
    <string name="bluetooth_disabled_info">The Bluetooth adapter is turned off. Click the button below to enable it.</string>
    <string name="bluetooth_disabled_action">Enable</string>

    <string name="blinky_guide_title">CAN\'T SEE YOUR DEVICE?</string>
    <string name="blinky_guide_location_info">3. Location is turned off. Some Android phones require it enabled in order to scan for Bluetooth LE devices.
		If you are sure your bot is advertising and it doesn\'t show up here, click the button below to enable Location.</string>
    <string name="blinky_guide_location_action">Enable</string>

    <string name="not_supported_title">DEVICE NOT SUPPORTED</string>
    <string name="not_supported_info">1. The Bot service hasn\'t been found on the device\'s attribute table..</string>
    <string name="not_supported_action">Fix and try again</string>

    <string name="state_connecting">Connecting…</string>
    <string name="state_initializing">Initializing…</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="createproject">Create Project</string>
    <string name="previos_projects">Previos Projects</string>
    <string name="enter_car_number">Enter Car Number</string>
    <string name="next">Next</string>
    <string name="select_no_of_images">Select No of Images</string>
    <string name="set_focal_length">Set Focal length</string>
    <string name="set_zoom">Set zoom</string>
    <string name="camera_control">Camera Control</string>
    <string name="send">Send</string>
    <string name="clicked_image">Clicked Image</string>
    <string name="imagetaken">ImageTaken</string>
    <string name="picture">Picture</string>
    <string name="create_project">Create Project</string>
    <string name="login">Login</string>
    <string name="pause">pause</string>
    <string name="terminate">Terminate</string>
    <string name="remote_control">Remote Control</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="enter_ip_address">Enter Ip Address</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_project_info">projectInfo</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="images_url">Images Url</string>
    <string name="textview">TextView</string>
    <string name="update_project">Update Project</string>
    <string name="stop">stop</string>
</resources>
